# internal/models/invoice.go
@@ -6,10 +6,12 @@ import (
 )
 
 type Invoice struct {
-	Id            int           `json:"id"`
-	Amount        int           `json:"amount"`
-	UserUuid      uuid.UUID     `json:"userUuid"`
-	PaymentMethod PaymentMethod `json:"paymentMethod"`
-	CreatedAt     time.Time     `json:"createdAtt"`
-	UpdatedAt     time.Time     `json:"updatedAt"`
+	Id                 int           `json:"id"`
+	Amount             int           `json:"amount"`
+	UserUuid           uuid.UUID     `json:"userUuid"`
+	PaymentMethod      PaymentMethod `json:"paymentMethod"`
+	AcquiringInvoiceId string        `json:"acquiringInvoiceId"`
+	PaymentStatus      PaymentStatus `json:"paymentStatus"`
+	CreatedAt          time.Time     `json:"createdAtt"`
+	UpdatedAt          time.Time     `json:"updatedAt"`
 }
